force-app/main/default/objects/ACRObj1__c/ACRObj1__c.object-meta.xml
<CustomObject>
    <description>TESTbCKUPOBJECT</description>
    <label>ACRObj1</label>
    <nameField>
        <label>ACRObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACRObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>