force-app/main/default/objects/ACRObj1__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <description>Test sai kumar @#$%^&amp;*()_+-=?&gt;&lt;,./&quot;:;&apos;\][}{~!</description>
    <label>Field2</label>
    <length>7</length>
    <type>Text</type>
</CustomField>