force-app/main/default/objects/ACRObj1__c/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <description>sai phone symbol test 📞 and edit 📞</description>
    <label>Field3</label>
    <type>Phone</type>
</CustomField>